Fixed sidebar to contain overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
     background-color: black;
     height: 100%;
     width: 100%;
+    overflow: auto;
 }
 
 
